<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"


    tools:context=".confirm"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="381dp"
        android:layout_height="237dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/movieDetailsLayout2"
            android:layout_width="126dp"
            android:layout_height="229dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/imageButton7.1"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/second_show"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/incep"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView.1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/inception"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsLayout.1"
            android:layout_width="123dp"
            android:layout_height="235dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/imageButton7.2"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/oppenheimer"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/oppen"
                tools:layout_editor_absoluteX="155dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/oppenheimer"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="155dp"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsLayout"
            android:layout_width="130dp"
            android:layout_height="234dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tenet"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/tenet"
                tools:layout_editor_absoluteX="282dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/tenet"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="282dp"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bookingStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:text="@string/booking_successful"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:text="@string/second_ii_show"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_12_05_2024"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

    <TextView
        android:id="@+id/timeTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="4dp"
        android:text="@string/time_18_30pm"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/ticketTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="4dp"
        android:text="@string/ticket_1x2_2"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView2" />

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_amount_500"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketTextView" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="149dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#575D6F"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/pay"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView" />

    <TextView
        android:id="@+id/nowShowingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="21dp"
        android:text="@string/now_showing"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="152dp"
        android:layout_height="215dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingStatusTextView"
        app:srcCompat="@drawable/second" />


</androidx.constraintlayout.widget.ConstraintLayout>
