<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".home">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="237dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:id="@+id/movieDetailsLayout1"
            android:layout_width="178dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="DuplicateIds">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="152dp"
                android:layout_height="214dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/second_show"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/second" />

            <TextView
                android:id="@+id/textView.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/second_show"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsLayout.2"
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/deadpool"
                android:layout_width="153dp"
                android:layout_height="212dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/dead_pool"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dpd" />

            <TextView
                android:id="@+id/textView.2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/dead_pool"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="218dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/movieDetailsLayout.1"
            android:layout_width="126dp"
            android:layout_height="229dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton7.1"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/inception"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/incep" />

            <TextView
                android:id="@+id/textView.3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/inception"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsLayout"
            android:layout_width="123dp"
            android:layout_height="235dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton7.2"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/oppenheimer"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/oppen" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/oppenheimer"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieDetailsLayout"
            android:layout_width="130dp"
            android:layout_height="234dp"
            android:orientation="vertical"
            tools:ignore="DuplicateIds">

            <ImageButton
                android:id="@+id/imageButton7.3"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tenet"
                android:foregroundGravity="center|center_horizontal"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/tenet" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:foregroundGravity="center|center_horizontal"
                android:gravity="center"
                android:text="@string/tenet"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_corners_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/onhome"
            app:tint="@color/button_color" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/map"
            app:srcCompat="@drawable/nmap" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/notification"
            app:srcCompat="@drawable/onmsg" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/onprofile" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profileicon" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/list" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/categories"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            android:textColor="@color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thriller"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/romantic"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/starsrating" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="New"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/show_more"
        android:textColor="@color/button_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
